--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -160,6 +160,8 @@ select {
   width: 100%;
   margin: 0 auto;
   background-color: #000000;
+  height: 100vh;
+  overflow: hidden;
 }
 
 @font-face {
@@ -202,6 +204,47 @@ select {
   color: #f37107;
 }
 
+.form {
+  position: relative;
+  width: 100%;
+}
+
+.form__inner {
+  padding: 60px 0 0 0;
+}
+
+.form__item {
+  position: relative;
+}
+
+.form__fieldset {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.form__input {
+  width: 260px;
+  height: 30px;
+  margin-right: 20px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-size: 18px;
+  padding: 0 0 0 12px;
+}
+
+.form__btn {
+  width: 80px;
+  height: 30px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-size: 18px;
+  cursor: pointer;
+}
+
 .main-desc {
   position: relative;
   width: 100%;
@@ -209,7 +252,7 @@ select {
 
 .main-desc__inner {
   position: relative;
-  padding: 110px 0 0 0;
+  padding: 60px 0 0 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -228,6 +271,7 @@ select {
 
 .main-desc__img-item {
   position: relative;
+  width: 100px;
 }
 
 .main-desc__list {
@@ -263,7 +307,7 @@ select {
 }
 
 .desc__inner {
-  padding: 30px 0 0 0;
+  padding: 6px 0 0 0;
   width: 100%;
 }
 
