--- a/assets/scss/_main-desc.scss
+++ b/assets/scss/_main-desc.scss
@@ -4,7 +4,7 @@
 
   &__inner{
     position: relative;
-    padding: 110px 0 0 0;
+    padding: 60px 0 0 0;
     display: flex;
     justify-content: center;
     align-items:center;
@@ -17,6 +17,7 @@
 
   &__img-item{
     position: relative;
+    width: 100px;
   }
 
   &__list{
