--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -2,5 +2,6 @@
 @import "styles.scss";
 @import "font-face.scss";
 @import "_header.scss";
+@import "_form.scss";
 @import "_main-desc.scss";
 @import "_desc.scss";
