--- a/assets/scss/_desc.scss
+++ b/assets/scss/_desc.scss
@@ -1,35 +1,52 @@
-.desc{
+.desc {
   position: relative;
+  z-index: 2;
   width: 100%;
 
-  &__inner{
-    padding: 6px 0 0 0;
+  &__inner {
     width: 100%;
+    padding: 6px 0 0 0;
+    // margin-bottom: 60px;
   }
 
-  &__list{
+  &__list {
     display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: center;
-    height: 240px;
     align-items: center;
+    flex-direction: row;
+    // flex-wrap: wrap;
+    justify-content: center;
+
+    height: 240px;
   }
 
-  &__item{
-    background-color: #3d3d3d;
-    margin-bottom: 20px;
-    text-align: center;
+  &__item {
     width: 320px;
+    // margin-bottom: 20px;
 
-    // &:nth-child(3n) {
-    //   margin-bottom: 0;
-    // }
+    text-align: center;
+
+    
+
+
   }
 
-  &__item-text{
-    font-size: 24px;
-    color: #fcfcfc;
+  &__item-text {
     padding: 10px 28px;
+
+    color: #fcfcfc;
+
+    font-size: 24px;
+    font-family: 'Open Sans', sans-serif;
+    margin-bottom: 20px;
+    background-color: #595891;
+  }
+
+  &__item-text--min{
+    background: none;
+    color: #88b9d3fe;
+    font-weight: 700;
+    text-shadow: rgb(0, 0, 0) 2px 2px 1px;
+    font-size: 100px;
+    font-family: 'Open Sans', sans-serif;
   }
 }
