--- a/assets/scss/_form.scss
+++ b/assets/scss/_form.scss
@@ -1,34 +1,74 @@
-.form{
+.form {
   position: relative;
+  z-index: 2;
   width: 100%;
 
-  &__inner{
+  &__inner {
     padding: 60px 0 0 0;
   }
 
-  &__item{
+  &__item {
     position: relative;
   }
 
-  &__fieldset{
+  &__fieldset {
     display: flex;
     justify-content: center;
+    align-items: center;
   }
 
-  &__input{
-    width: 260px;
-    height: 30px;
+  &__input {
+    // box-sizing: border-box;
+    width: 280px;
+    height: 35px;
     margin-right: 20px;
-    box-sizing:border-box;
-    font-size: 18px;
     padding: 0 0 0 12px;
+    border: 2px solid #595891;
+    background-color: #dfecf3fe;
+    color: #595891;
+    font-size: 18px;
+
+    &::placeholder{
+      color: #595891;
+    }
   }
 
-  &__btn{
+  &__btn {
+    // box-sizing: border-box;
     width: 80px;
-    height: 30px;
-    box-sizing:border-box;
-    font-size: 18px;
+    height: 35px;
+
     cursor: pointer;
+
+    font-size: 18px;
+    display: inline-block;
+    width: 115px;
+    height: 35px;
+    line-height: 15px;
+    font-size: 20px;
+    text-align: center;
+    text-decoration: none;
+    text-shadow: 0 1px rgba(255,255,255,.2), 0 -1px rgba(0,0,0,.8);
+    outline: none;
+    border: none;
+    border-radius: 100px;
+    background: #595891 radial-gradient(150% 100% at 50% 5px, rgba(255,255,255,.2), rgba(0,0,0,0));
+    box-shadow: inset rgba(0,0,0,.6) 0 -2px 5px, inset rgba(252,255,255,.7) 0 2px 5px, rgba(0,0,0,.8) 0 2px 5px -1px;
+    color:#fff;
+    user-select: none;
+  
+  &:hover {
+    color: rgb(128,207,214);
+    cursor: pointer;
+  }
+  &:active {
+    padding-bottom: 1px;
+    box-shadow:
+     inset rgba(0,0,0,1) 0 1px 3px,
+     inset rgba(0,0,0,.6) 0 -2px 5px,
+     inset rgba(252,255,255,.7) 0 2px 5px,
+     0 1px rgba(255,255,255,.08);
+    color: rgb(109, 154, 161);
+  }
   }
 }
