--- a/assets/scss/_styles.scss
+++ b/assets/scss/_styles.scss
@@ -1,14 +1,49 @@
 /* wrapper */
 
-.page{
+.page {
   position: relative;
 }
 
-.wrapper{
-  max-width: 1280px;
-  width: 100%;
-  margin: 0 auto;
-  background-color: #000000;
-  height: 100vh;
+.wrapper {
   overflow: hidden;
+  position: relative;
+  width: 100%;
+  max-width: 1280px;
+  height: 100vh;
+  margin: 0 auto;
+
+  background-color: #000000;
+}
+
+
+#video-bg {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  overflow: hidden;
+  z-index: 1;
+  // background: url(bg/daisy-stock-poster.jpg) no-repeat #94a233;
+  // background-size: cover;
+}
+
+#video-bg > video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-width: 100%; 
+  min-height: 100%;
+  width: auto;
+  height: auto; 
+}
+
+@supports (object-fit: cover) {
+   #video-bg > video {
+       top: 0;
+       left: 0;
+       width: 100%;
+       height: 100%;
+       object-fit: cover;
+   }
 }
