--- a/assets/scss/_styles.scss
+++ b/assets/scss/_styles.scss
@@ -9,7 +9,8 @@
   position: relative;
   width: 100%;
   max-width: 1280px;
-  height: 100vh;
+  // height: 100vh;
+  height: 100%;
   margin: 0 auto;
 
   background-color: #000000;
