--- a/assets/scss/_desc.scss
+++ b/assets/scss/_desc.scss
@@ -1,6 +1,7 @@
 .desc {
   position: relative;
   z-index: 2;
+
   width: 100%;
 
   &__inner {
@@ -24,29 +25,26 @@
     // margin-bottom: 20px;
 
     text-align: center;
-
-    
-
-
   }
 
   &__item-text {
+    margin-bottom: 20px;
     padding: 10px 28px;
 
     color: #fcfcfc;
-
-    font-size: 24px;
-    font-family: 'Open Sans', sans-serif;
-    margin-bottom: 20px;
     background-color: #595891;
+
+    font-family: "Open Sans", sans-serif;
+    font-size: 24px;
   }
 
-  &__item-text--min{
-    background: none;
+  &__item-text--min {
     color: #88b9d3fe;
-    font-weight: 700;
+    background: none;
     text-shadow: rgb(0, 0, 0) 2px 2px 1px;
+
+    font-family: "Open Sans", sans-serif;
     font-size: 100px;
-    font-family: 'Open Sans', sans-serif;
+    font-weight: 700;
   }
 }
