--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -156,8 +156,8 @@ select {
 }
 
 .wrapper {
-  overflow: hidden;
   position: relative;
+  overflow: hidden;
   width: 100%;
   max-width: 1280px;
   height: 100%;
@@ -165,24 +165,26 @@ select {
   background-color: #000000;
 }
 
-#video-bg {
+.video-bg {
   position: fixed;
+  z-index: 1;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
   overflow: hidden;
-  z-index: 1;
+  background: url(bg/daisy-stock-poster.jpg) no-repeat #94a233;
+  background-size: cover;
 }
 
 #video-bg > video {
   position: absolute;
   top: 0;
   left: 0;
-  min-width: 100%;
-  min-height: 100%;
   width: auto;
+  min-width: 100%;
   height: auto;
+  min-height: 100%;
 }
 
 @supports ((-o-object-fit: cover) or (object-fit: cover)) {
@@ -229,14 +231,14 @@ select {
 .header__logo-text {
   text-transform: uppercase;
   color: #88b9d3fe;
-  font-family: 'Roboto', sans-serif;
   text-shadow: #3b3b3b 4px 4px 5px;
+  font-family: "Roboto", sans-serif;
   font-size: 100px;
   font-weight: 700;
 }
 
 .header__logo-text--orange {
-  color: #E8403C;
+  color: #e8403c;
 }
 
 .form {
@@ -255,19 +257,19 @@ select {
 }
 
 .form__fieldset {
-  display: block;
   position: relative;
+  display: block;
   width: 100%;
 }
 
 .form__label {
   display: block;
   color: #595891;
-  font-size: 30px;
-  line-height: 70px;
-  font-weight: 700;
-  font-family: 'Roboto', sans-serif;
   text-shadow: white 2px 2px 3px;
+  font-family: "Roboto", sans-serif;
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 70px;
 }
 
 .form__list {
@@ -285,9 +287,9 @@ select {
   height: 35px;
   margin-right: 20px;
   padding: 0 0 0 12px;
+  color: #595891;
   border: 2px solid #595891;
   background-color: #dfecf3fe;
-  color: #595891;
   font-size: 18px;
 }
 
@@ -312,34 +314,34 @@ select {
 }
 
 .form__btn {
-  cursor: pointer;
   display: inline-block;
   width: 115px;
   height: 35px;
-  line-height: 15px;
-  font-size: 20px;
+  cursor: pointer;
   text-align: center;
   text-decoration: none;
-  text-shadow: 0 1px rgba(255, 255, 255, 0.2), 0 -1px rgba(0, 0, 0, 0.8);
+  color: #ffffff;
   border: none;
   border-radius: 100px;
   background: #595891 -o-radial-gradient(50% 5px, 150% 100%, rgba(255, 255, 255, 0.2), rgba(0, 0, 0, 0));
   background: #595891 radial-gradient(150% 100% at 50% 5px, rgba(255, 255, 255, 0.2), rgba(0, 0, 0, 0));
   -webkit-box-shadow: inset rgba(0, 0, 0, 0.6) 0 -2px 5px, inset rgba(252, 255, 255, 0.7) 0 2px 5px, rgba(0, 0, 0, 0.8) 0 2px 5px -1px;
           box-shadow: inset rgba(0, 0, 0, 0.6) 0 -2px 5px, inset rgba(252, 255, 255, 0.7) 0 2px 5px, rgba(0, 0, 0, 0.8) 0 2px 5px -1px;
-  color: #fff;
+  text-shadow: 0 1px rgba(255, 255, 255, 0.2), 0 -1px rgba(0, 0, 0, 0.8);
+  font-size: 20px;
+  line-height: 15px;
 }
 
 .form__btn:hover {
-  color: #80cfd6;
   cursor: pointer;
+  color: #80cfd6;
 }
 
 .form__btn:active {
   padding-bottom: 1px;
+  color: #6d9aa1;
   -webkit-box-shadow: inset black 0 1px 3px, inset rgba(0, 0, 0, 0.6) 0 -2px 5px, inset rgba(252, 255, 255, 0.7) 0 2px 5px, 0 1px rgba(255, 255, 255, 0.08);
           box-shadow: inset black 0 1px 3px, inset rgba(0, 0, 0, 0.6) 0 -2px 5px, inset rgba(252, 255, 255, 0.7) 0 2px 5px, 0 1px rgba(255, 255, 255, 0.08);
-  color: #6d9aa1;
 }
 
 .main-desc {
@@ -372,29 +374,29 @@ select {
 
 .main-desc__title-text {
   position: relative;
-  color: #ffffff;
-  font-size: 76px;
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 700;
   margin-right: 40px;
+  color: #ffffff;
   text-shadow: #3b3b3b 4px 4px 5px;
+  font-family: "Open Sans", sans-serif;
+  font-size: 76px;
+  font-weight: 700;
 }
 
 .main-desc__title-degree {
   position: relative;
   color: #ffffff;
   text-shadow: #3b3b3b 4px 4px 5px;
+  font-family: "Open Sans", sans-serif;
   font-size: 76px;
-  font-family: 'Open Sans', sans-serif;
   font-weight: 700;
 }
 
 .main-desc__title-degree::before {
-  content: "";
+  position: relative;
   display: inline-block;
   width: 70px;
   height: 66px;
-  position: relative;
+  content: "";
   background-image: url("../img/attempt.png");
   background-repeat: no-repeat;
   background-size: cover;
@@ -412,10 +414,10 @@ select {
 
 .main-desc__item-text {
   color: #595891;
-  font-weight: 700;
   text-shadow: white 2px 2px 1px;
+  font-family: "Open Sans", sans-serif;
   font-size: 60px;
-  font-family: 'Open Sans', sans-serif;
+  font-weight: 700;
 }
 
 .desc {
@@ -452,19 +454,19 @@ select {
 }
 
 .desc__item-text {
+  margin-bottom: 20px;
   padding: 10px 28px;
   color: #fcfcfc;
-  font-size: 24px;
-  font-family: 'Open Sans', sans-serif;
-  margin-bottom: 20px;
   background-color: #595891;
+  font-family: "Open Sans", sans-serif;
+  font-size: 24px;
 }
 
 .desc__item-text--min {
-  background: none;
   color: #88b9d3fe;
-  font-weight: 700;
+  background: none;
   text-shadow: black 2px 2px 1px;
+  font-family: "Open Sans", sans-serif;
   font-size: 100px;
-  font-family: 'Open Sans', sans-serif;
+  font-weight: 700;
 }
