--- a/assets/scss/_styles.scss
+++ b/assets/scss/_styles.scss
@@ -19,7 +19,7 @@
 }
 
 
-#video-bg {
+.video-bg {
   position: fixed;
   z-index: 1;
   top: 0;
@@ -28,8 +28,8 @@
   left: 0;
 
   overflow: hidden;
-  // background: url(bg/daisy-stock-poster.jpg) no-repeat #94a233;
-  // background-size: cover;
+  background: url(bg/daisy-stock-poster.jpg) no-repeat #94a233;
+  background-size: cover;
 }
 
 #video-bg > video {
