--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -153,6 +153,8 @@ select {
 /* wrapper */
 .page {
   position: relative;
+  background: url(../img/img-bg.jpg) no-repeat;
+  background-size: cover;
 }
 
 .wrapper {
@@ -162,40 +164,6 @@ select {
   max-width: 1280px;
   height: 100%;
   margin: 0 auto;
-  background-color: #000000;
-}
-
-.video-bg {
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  overflow: hidden;
-  background: url(bg/daisy-stock-poster.jpg) no-repeat #94a233;
-  background-size: cover;
-}
-
-#video-bg > video {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: auto;
-  min-width: 100%;
-  height: auto;
-  min-height: 100%;
-}
-
-@supports ((-o-object-fit: cover) or (object-fit: cover)) {
-  #video-bg > video {
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    -o-object-fit: cover;
-       object-fit: cover;
-  }
 }
 
 @font-face {
