--- a/assets/scss/_styles.scss
+++ b/assets/scss/_styles.scss
@@ -2,55 +2,18 @@
 
 .page {
   position: relative;
+  background: url(../img/img-bg.jpg) no-repeat;
+  background-size: cover;
 }
 
 .wrapper {
   position: relative;
-
   overflow: hidden;
-
   width: 100%;
   max-width: 1280px;
-  // height: 100vh;
   height: 100%;
   margin: 0 auto;
-
-  background-color: #000000;
 }
 
 
-.video-bg {
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
 
-  overflow: hidden;
-  background: url(bg/daisy-stock-poster.jpg) no-repeat #94a233;
-  background-size: cover;
-}
-
-#video-bg > video {
-  position: absolute;
-  top: 0;
-  left: 0;
-
-  width: auto;
-  min-width: 100%;
-  height: auto;
-  min-height: 100%;
-}
-
-@supports (object-fit: cover) {
-  #video-bg > video {
-    top: 0;
-    left: 0;
-
-    width: 100%;
-    height: 100%;
-
-    object-fit: cover;
-  }
-}
