--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -150,11 +150,12 @@ select {
   vertical-align: middle;
 }
 
-/* wrapper */
 .page {
   position: relative;
   background: url(../img/img-bg.jpg) no-repeat;
   background-size: cover;
+  height: 100%;
+  overflow: hidden;
 }
 
 .wrapper {
@@ -437,4 +438,153 @@ select {
   font-family: "Open Sans", sans-serif;
   font-size: 100px;
   font-weight: 700;
+}
+
+@media (min-width: 599px) and (max-width: 768px) {
+  .wrapper {
+    width: 96%;
+  }
+  .header__logo-text {
+    font-size: 80px;
+  }
+  .main-desc__title-text {
+    font-size: 56px;
+  }
+  .main-desc__title-degree {
+    display: none;
+  }
+  .main-desc__item-text {
+    font-size: 46px;
+    margin-bottom: 40px;
+  }
+  .desc__item {
+    width: 180px;
+  }
+  .desc__item-text {
+    font-size: 20px;
+  }
+  .desc__item-text span {
+    display: block;
+    margin-bottom: 10px;
+  }
+  .desc__item-text--min {
+    font-size: 50px;
+    padding: 0;
+  }
+}
+
+@media (min-width: 769px) and (max-width: 882px) {
+  .wrapper {
+    width: 96%;
+  }
+  .main-desc__title-text {
+    font-size: 66px;
+  }
+  .main-desc__title-degree {
+    font-size: 66px;
+  }
+  .main-desc__title-degree::before {
+    height: 64px;
+  }
+  .main-desc__item-text {
+    font-size: 52px;
+  }
+  .desc__item {
+    width: 240px;
+  }
+  .desc__item-text {
+    font-size: 20px;
+  }
+  .desc__item-text--min {
+    font-size: 70px;
+  }
+}
+
+@media (min-width: 883px) and (max-width: 1010px) {
+  .wrapper {
+    width: 96%;
+  }
+}
+
+@media (max-width: 598px) {
+  .wrapper {
+    width: 96%;
+  }
+  .header__logo-text {
+    font-size: 52px;
+  }
+  .form {
+    width: 100%;
+  }
+  .form__inner {
+    width: 100%;
+  }
+  .form__item {
+    width: 100%;
+  }
+  .form__fieldset {
+    text-align: center;
+    width: 300px;
+    margin: 0 auto;
+  }
+  .form__list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .form__input {
+    margin-right: 0;
+    margin-bottom: 15px;
+  }
+  .main-desc__inner {
+    padding-top: 60px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .main-desc__title {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .main-desc__title-img {
+    margin: 0;
+  }
+  .main-desc__title-text {
+    font-size: 56px;
+    margin-right: 0;
+    margin-bottom: 20px;
+  }
+  .main-desc__title-degree {
+    display: none;
+  }
+  .main-desc__item-text {
+    font-size: 46px;
+    margin-bottom: 40px;
+  }
+  .desc__list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    height: 100%;
+  }
+  .desc__item {
+    width: 300px;
+  }
+  .desc__item-text {
+    font-size: 27px;
+  }
+  .desc__item-text--min {
+    display: none;
+  }
 }
